F2P-58 | Fixed content shift when opening modals; fixed mobile and tablet styling of news post form; improved spacing in rename account modal

--- a/src/theme/styles.css
+++ b/src/theme/styles.css
@@ -184,6 +184,7 @@
   }
   html {
     @apply font-sans;
+    scrollbar-gutter: stable;
   }
   button {
     cursor: pointer;
